Modified default Serilog nodeUri

--- a/source/spydersoft.Identity/appsettings.json
+++ b/source/spydersoft.Identity/appsettings.json
@@ -7,7 +7,7 @@
     "WriteTo:Elastic": {
       "Name": "Elasticsearch",
       "Args": {
-        "nodeUris": "http://elastic.mattgerega.com/"
+        "nodeUris": "http://elastic.mattgerega.net/"
       }
     },
     "Properties": {
