--- a/source/spydersoft.Identity/appsettings.json
+++ b/source/spydersoft.Identity/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "IdentityConnection": "Server=sql01;Database=DevIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "ProviderSettings" : {
+    "GoogleClientId": "",
+    "GoogleClientSecret": "" 
+  }, 
   "Serilog": {
     "MinimumLevel": "Warning",
     "WriteTo:Elastic": {
