--- a/source/spydersoft.Identity/appsettings.json
+++ b/source/spydersoft.Identity/appsettings.json
@@ -5,13 +5,22 @@
   "ProviderSettings" : {
     "GoogleClientId": "",
     "GoogleClientSecret": "" 
-  }, 
+  },
   "Serilog": {
     "MinimumLevel": "Warning",
-    "WriteTo:Elastic": {
-      "Name": "Elasticsearch",
-      "Args": {
-        "nodeUris": "http://elastic.mattgerega.net/"
+    "WriteTo": {
+      "ConsoleSink": {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Literate, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level}] {SourceContext}{NewLine}{Message:lj}{NewLine}{Exception}{NewLine}"
+        }
+      },
+      "Elastic": {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://elastic.mattgerega.com/"
+        }
       }
     },
     "Properties": {
