Modified logging settings

--- a/source/spydersoft.Identity/appsettings.json
+++ b/source/spydersoft.Identity/appsettings.json
@@ -7,7 +7,13 @@
     "GoogleClientSecret": "" 
   },
   "Serilog": {
-    "MinimumLevel": "Warning",
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Error",
+        "System": "Error" 
+      } 
+    },
     "WriteTo": {
       "ConsoleSink": {
         "Name": "Console",
