--- a/source/spydersoft.Identity/appsettings.Development.json
+++ b/source/spydersoft.Identity/appsettings.Development.json
@@ -1,15 +1,14 @@
 {
   "Serilog": {
-    "MinimumLevel": "Debug",
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
     "Properties": {
       "Application": "identity.server.debug"
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Debug"
     }
   }
 }
