Updated logging settings

--- a/source/spydersoft.Identity/appsettings.json
+++ b/source/spydersoft.Identity/appsettings.json
@@ -25,7 +25,8 @@
       "ElasticSink": {
         "Name": "Elasticsearch",
         "Args": {
-          "nodeUris": "http://elastic.mattgerega.net/"
+          "nodeUris": "https://elastic.mattgerega.net/",
+          "indexFormat": "log-debug-{0:yyyy.MM}"
         }
       }
     },
