Added new healthcheck endpoints

--- a/source/spydersoft.Identity/spydersoft.Identity.csproj
+++ b/source/spydersoft.Identity/spydersoft.Identity.csproj
@@ -27,6 +27,7 @@
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="6.0.2" />
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="GravatarHelper.AspNetCore" Version="1.1.0" />
