--- a/source/spydersoft.Identity/appsettings.json
+++ b/source/spydersoft.Identity/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "IdentityConnection": "Server=sql01;Database=DevIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=sqldev01;Database=DevIdentity;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true",
     "RedisCache": "" 
   },
   "ProviderSettings": {
