Renamed spydersoft to Spydersoft for standards compliance

--- a/.devops/pipeline-ci.yml
+++ b/.devops/pipeline-ci.yml
@@ -55,4 +55,4 @@ extends:
           workingDirectory: $(Build.SourcesDirectory)/source/Spydersoft.Identity
     preTestSteps:
       - pwsh:
-          Copy-Item $(Build.SourcesDirectory)/source/Spydersoft.identity.tests/bin/Release/net6.0/refs/Microsoft.AspNetCore.Http.Features.dll $(Build.SourcesDirectory)/source/Spydersoft.identity.tests/bin/Release/net6.0
+          Copy-Item $(Build.SourcesDirectory)/source/Spydersoft.Identity.Tests/bin/Release/net6.0/refs/Microsoft.AspNetCore.Http.Features.dll $(Build.SourcesDirectory)/source/Spydersoft.Identity.Tests/bin/Release/net6.0
