--- a/.devops/pipeline-ci.yml
+++ b/.devops/pipeline-ci.yml
@@ -62,5 +62,5 @@ extends:
       - task: CmdLine@2
         displayName: 'Gulp Build'
         inputs:
-          script: 'gulp build:dist'
+          script: 'gulp'
           workingDirectory: $(Build.SourcesDirectory)/source/Spydersoft.Identity
