--- a/nuget.config
+++ b/nuget.config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="SpydersoftDevelop" value="https://proget.mattgerega.com/nuget/develop/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
