--- a/.devops/pipeline-ci.yml
+++ b/.devops/pipeline-ci.yml
@@ -25,6 +25,7 @@ pr: none
 extends:
   template: pipelines/build-api/v1.yml@templates
   parameters:
+    gitVersionSpec: '6.x'
     buildProject: source/Spydersoft.Identity.sln
     publishProject: src/Spydersoft.TechRadar.Data.Api.csproj
     netCoreVersion: '8.0.x'
