--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,16 +1,17 @@
-assembly-versioning-scheme: MajorMinorPatchTag
-continuous-delivery-fallback-tag: ''
-merge-message-formats:
-  pull-request: 'Merge pull request \#(?<PullRequestNumber>\d+) from'
-mode: Mainline
-branches:
-  main:
-    regex: main
-    tag: ''
-    increment: Patch
-    is-mainline: true
-  feature:
-    regex: features?[/-]
-    increment: None
-ignore:
-  sha: []
+workflow: GitHubFlow/v1
+# assembly-versioning-scheme: MajorMinorPatchTag
+# continuous-delivery-fallback-tag: ''
+# merge-message-formats:
+#   pull-request: 'Merge pull request \#(?<PullRequestNumber>\d+) from'
+# mode: Mainline
+# branches:
+#   main:
+#     regex: main
+#     tag: ''
+#     increment: Patch
+#     is-mainline: true
+#   feature:
+#     regex: features?[/-]
+#     increment: None
+# ignore:
+#   sha: []
