--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,8 +1,14 @@
 workflow: GitHubFlow/v1
 # assembly-versioning-scheme: MajorMinorPatchTag
 # continuous-delivery-fallback-tag: ''
-# merge-message-formats:
-#   pull-request: 'Merge pull request \#(?<PullRequestNumber>\d+) from'
+merge-message-formats:
+  pull-request: 'Merge pull request \#(?<PullRequestNumber>\d+) from'
+branches:
+  # main:
+  #   mode: ContinuousDelivery
+  #   increment: Minor
+  feature:
+    mode: ContinuousDelivery
 # mode: Mainline
 # branches:
 #   main:
