Update pipeline to standard parameters

--- a/.devops/pipeline-ci.yml
+++ b/.devops/pipeline-ci.yml
@@ -46,14 +46,14 @@ extends:
     ${{ else }}:
       updateHelmConfig: true
       buildAndPublishDockerImage: true
-    sonar_endpoint_name: sonarcloud-spydersoft
-    sonar_project_key: spyder007_identity_server
-    sonar_project_name: identity_server
-    execute_sonar: true
-    execute_tests: true
-    test_projects: '**/*.Tests/*.csproj'
-    use_sonarcloud: true
-    sonar_cloud_organization: spydersoft-mjg
+    sonarEndpointName: sonarcloud-spydersoft
+    sonarProjectKey: spyder007_identity_server
+    sonarProjectName: identity_server
+    executeSonar: true
+    executeTests: true
+    testProjects: '**/*.Tests/*.csproj'
+    useSonarCloud: true
+    sonarCloudOrganization: spydersoft-mjg
     prebuildSteps:
       - task: Npm@1
         displayName: NPM Install
