--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -9,15 +9,11 @@ branches:
   #   increment: Minor
   feature:
     mode: ContinuousDelivery
-# mode: Mainline
-# branches:
-#   main:
-#     regex: main
-#     tag: ''
-#     increment: Patch
-#     is-mainline: true
-#   feature:
-#     regex: features?[/-]
-#     increment: None
-# ignore:
-#   sha: []
+  tags:
+    mode: ManualDeployment
+    label: ''
+    increment: Inherit
+    prevent-increment:
+      when-current-commit-tagged: true
+    track-merge-message: true
+    regex: ^tags?[/-](?<BranchName>.+)
