--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -9,3 +9,12 @@ branches:
   #   increment: Minor
   feature:
     mode: ContinuousDelivery
+  tags:
+    mode: ManualDeployment
+    label: ''
+    increment: Inherit
+    prevent-increment:
+      when-current-commit-tagged: true
+    track-merge-message: true
+    regex: ^tags?[/-](?<BranchName>.+)
+    is-main-branch: true
