--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -15,6 +15,8 @@ branches:
     increment: Inherit
     prevent-increment:
       when-current-commit-tagged: true
+    source-branches:
+    - main
     track-merge-message: true
     regex: ^tags?[/-](?<BranchName>.+)
     is-main-branch: true
