Migrate to platform functions

--- a/source/Spydersoft.Identity/appsettings.Development.json
+++ b/source/Spydersoft.Identity/appsettings.Development.json
@@ -6,9 +6,12 @@
         "Microsoft": "Debug",
         "System": "Debug"
       }
-    },
-    "Properties": {
-      "Application": "identity.server.debug"
     }
+  },
+  "Telemetry": {
+    "ServiceName": "Identity.Local",
+    "UseLogExporter": "console",
+    "UseMetricsExporter": "console",
+    "UseTracingExporter": "console"
   }
 }
