--- a/source/Spydersoft.Identity/appsettings.json
+++ b/source/Spydersoft.Identity/appsettings.json
@@ -13,29 +13,23 @@
     "EmailFromAddress": "system@mattgerega.com"
   },
   "Serilog": {
-    "Using": [ "Serilog.Enrichers.Span" ],
     "MinimumLevel": {
       "Default": "Warning",
       "Override": {
         "Microsoft": "Error",
         "System": "Error"
       }
-    },
-    "WriteTo": {
-      "ConsoleSink": {
-        "Name": "Console",
-        "Args": {
-          "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact"
-        }
-      }
-    },
-    "Enrich": [ "FromLogContext", "WithSpan" ],
-    "Properties": {
-      "Application": "identity.server"
     }
   },
-  "Zipkin": {
-    "Host": "https://tempo.mattgerega.net/zipkin/spans",
-    "ServiceName": "identity.server"
+  "Telemetry": {
+    "ActivitySourceName": "Identity.Activity",
+    "MeterName": "Identity.Meter",
+    "Otlp": {
+      "Endpoint": ""
+    },
+    "ServiceName": "Identity",
+    "UseLogExporter": "otlp",
+    "UseMetricsExporter": "otlp",
+    "UseTracingExporter": "otlp"
   }
 }
