--- a/source/Spydersoft.Identity/appsettings.Development.json
+++ b/source/Spydersoft.Identity/appsettings.Development.json
@@ -1,4 +1,14 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information"
+    },
+    "OpenTelemetry": {
+      "IncludeFormattedMessage": true,
+      "IncludeScopes": true,
+      "ParseStateValues": true
+    }
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
@@ -9,9 +19,28 @@
     }
   },
   "Telemetry": {
+    "ActivitySourceName": "Identity.Local.Activity",
+    "Log": {
+      "Otlp": {
+        "Endpoint": "https://loki.mattgerega.net/otlp/v1/logs",
+        "Protocol": "http"
+      },
+      "Type": "otlp"
+    },
+    "MeterName": "Identity.Local.Meter",
+    "Metrics": {
+      "Otlp": {
+        "Endpoint": "https://mimir.mattgerega.net/otlp",
+        "Protocol": "http"
+      },
+      "Type": "otlp"
+    },
     "ServiceName": "Identity.Local",
-    "UseLogExporter": "console",
-    "UseMetricsExporter": "console",
-    "UseTracingExporter": "console"
+    "Trace": {
+      "Otlp": {
+        "Endpoint": "http://tfx-internal.gerega.net:32326"
+      },
+      "Type": "otlp"
+    }
   }
 }
