--- a/source/Spydersoft.Identity/appsettings.json
+++ b/source/Spydersoft.Identity/appsettings.json
@@ -1,7 +1,14 @@
 ﻿{
   "ConnectionStrings": {
     "IdentityConnection": "Server=sqldev01;Database=DevIdentity;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true",
-    "RedisCache": "" 
+    "RedisCache": ""
+  },
+  "Logging": {
+    "OpenTelemetry": {
+      "IncludeFormattedMessage": true,
+      "IncludeScopes": true,
+      "ParseStateValues": true
+    }
   },
   "ProviderSettings": {
     "GoogleClientId": "",
@@ -23,13 +30,27 @@
   },
   "Telemetry": {
     "ActivitySourceName": "Identity.Activity",
+    "Log": {
+      "Otlp": {
+        "Endpoint": "",
+        "Protocol": "http"
+      },
+      "Type": "otlp"
+    },
     "MeterName": "Identity.Meter",
-    "Otlp": {
-      "Endpoint": ""
+    "Metrics": {
+      "Otlp": {
+        "Endpoint": "",
+        "Protocol": "http"
+      },
+      "Type": "otlp"
     },
     "ServiceName": "Identity",
-    "UseLogExporter": "otlp",
-    "UseMetricsExporter": "otlp",
-    "UseTracingExporter": "otlp"
+    "Trace": {
+      "Otlp": {
+        "Endpoint": ""
+      },
+      "Type": "otlp"
+    }
   }
 }
