--- a/source/Spydersoft.Identity/appsettings.Development.json
+++ b/source/Spydersoft.Identity/appsettings.Development.json
@@ -21,26 +21,15 @@
   "Telemetry": {
     "ActivitySourceName": "Identity.Local.Activity",
     "Log": {
-      "Otlp": {
-        "Endpoint": "https://loki.mattgerega.net/otlp/v1/logs",
-        "Protocol": "http"
-      },
-      "Type": "otlp"
+      "Type": "console"
     },
     "MeterName": "Identity.Local.Meter",
     "Metrics": {
-      "Otlp": {
-        "Endpoint": "https://mimir.mattgerega.net/otlp",
-        "Protocol": "http"
-      },
-      "Type": "otlp"
+      "Type": "console"
     },
     "ServiceName": "Identity.Local",
     "Trace": {
-      "Otlp": {
-        "Endpoint": "http://tfx-internal.gerega.net:32326"
-      },
-      "Type": "otlp"
+      "Type": "console"
     }
   }
 }
