--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,7 +1,7 @@
 #Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
 #For more information, please see https://aka.ms/containercompat
 
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-jammy AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-noble AS base
 LABEL org.opencontainers.image.source=https://github.com/spyder007/identity_server
 LABEL org.opencontainers.image.description="Spydersoft Identity Server"
 LABEL org.opencontainers.image.licenses=MIT
