--- a/source/Spydersoft.Identity/appsettings.Development.json
+++ b/source/Spydersoft.Identity/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "IdentityConnection": "Host=172.25.56.120;Port=25432;Database=identity;Username=identity;Password=id3ntityP@ss;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information"
