--- a/source/Spydersoft.Identity/appsettings.json
+++ b/source/Spydersoft.Identity/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "IdentityConnection": "Server=sqldev01;Database=DevIdentity;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "IdentityConnection": "",
     "RedisCache": ""
   },
   "Logging": {
