--- a/.devops/pipeline-ci.yml
+++ b/.devops/pipeline-ci.yml
@@ -31,7 +31,7 @@ extends:
   parameters:
     gitVersionSpec: '6.0.x'
     buildProject: source/Spydersoft.Identity.sln
-    publishProject: src/Spydersoft.TechRadar.Data.Api.csproj
+    publishProject: src/Spydersoft.Identity.csproj
     netCoreVersion: '9.0.x'
     artifactName: identityServer
     artifactZipName: Spydersoft.Identity
