Fixed OTLP reporting with headers

--- a/source/Spydersoft.Identity/appsettings.Development.json
+++ b/source/Spydersoft.Identity/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "IdentityConnection": "Host=172.25.56.120;Port=25432;Database=identity;Username=identity;Password=id3ntityP@ss;"
+    "IdentityConnection": ""
   },
   "Logging": {
     "LogLevel": {
