--- a/source/Spydersoft.Identity/Spydersoft.Identity.csproj
+++ b/source/Spydersoft.Identity/Spydersoft.Identity.csproj
@@ -59,6 +59,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="[8.0.1, 9)" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Npgsql.OpenTelemetry" Version="9.0.3" />
     <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.9.0-beta.1" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="10.15.0.120848">
