--- a/source/Spydersoft.Identity/appsettings.json
+++ b/source/Spydersoft.Identity/appsettings.json
@@ -32,16 +32,14 @@
     "ActivitySourceName": "Identity.Activity",
     "Log": {
       "Otlp": {
-        "Endpoint": "",
-        "Protocol": "http"
+        "Endpoint": ""
       },
       "Type": "otlp"
     },
     "MeterName": "Identity.Meter",
     "Metrics": {
       "Otlp": {
-        "Endpoint": "",
-        "Protocol": "http"
+        "Endpoint": ""
       },
       "Type": "otlp"
     },
