Add settings for origin

--- a/source/Spydersoft.Identity/appsettings.json
+++ b/source/Spydersoft.Identity/appsettings.json
@@ -3,6 +3,10 @@
     "IdentityConnection": "",
     "RedisCache": ""
   },
+  "IdentityServer": {
+    "PublicOrigin": "",
+    "IssuerUri": ""
+  },
   "Logging": {
     "OpenTelemetry": {
       "IncludeFormattedMessage": true,
